# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
myapp/: models.py  serializers.py  tests.py  urls.py  views.py
myapp/migrations/: 0001_initial.py
myproject/: settings.py  urls.py
